--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:21:31.406870Z",
-     "start_time": "2019-03-19T00:21:31.400709Z"
+     "end_time": "2019-03-19T00:26:07.247259Z",
+     "start_time": "2019-03-19T00:26:07.241259Z"
     }
    },
    "outputs": [],
@@ -74,11 +74,11 @@
     "                action = policy_index\n",
     "                action_prob = policy[i,policy_index]\n",
     "                \n",
-    "            for action_index in range(4):\n",
-    "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
-    "                V[i] = V[i] + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
+    "                for prob, next_state, reward, done in env.P[i][action]:\n",
+    "                    current_state = current_state + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
+    "                    \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
-    "            \n",
+    "            V[i] = current_state\n",
     "        if delta_value<theta: break\n",
     "        print(V.reshape((4,4)))\n",
     "        input()\n",
@@ -87,36 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:22:10.666950Z",
-     "start_time": "2019-03-19T00:22:10.661384Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0, 0, 0.0, True)]"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.P[0][3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-03-19T00:24:13.187604Z",
-     "start_time": "2019-03-19T00:24:13.180620Z"
+     "end_time": "2019-03-19T00:26:18.971049Z",
+     "start_time": "2019-03-19T00:26:12.549229Z"
     }
    },
    "outputs": [
@@ -124,42 +99,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]\n",
-      " [0.25 0.25 0.25 0.25]]\n",
-      "0\n",
-      "0.25\n",
-      "1\n",
-      "0.25\n",
-      "2\n",
-      "0.25\n",
-      "3\n",
-      "0.25\n"
+      "[[ 0.         -1.         -1.25       -1.375     ]\n",
+      " [-1.1875     -1.546875   -1.69921875 -1.91699219]\n",
+      " [-1.55859375 -1.77636719 -1.86889648 -2.12878418]\n",
+      " [-1.95257568 -2.16825867 -2.25109482  0.        ]]\n",
+      "\n",
+      "[[ 0.         -2.94921875 -4.06835938 -4.70727539]\n",
+      " [-3.64233398 -5.06365967 -5.92869568 -6.94413376]\n",
+      " [-5.4392662  -6.41138744 -7.04888701 -7.65574378]\n",
+      " [-7.36633891 -8.38393377 -8.23762916  0.        ]]\n",
+      "\n",
+      "[[  0.          -6.9695282  -10.48682404 -12.77535725]\n",
+      " [ -9.02258182 -13.14670795 -16.33533387 -19.73273575]\n",
+      " [-15.11167906 -18.33418939 -20.68961106 -21.97106241]\n",
+      " [-22.03162831 -25.41651758 -24.2416693    0.        ]]\n",
+      "\n",
+      "[[  0.         -15.62029324 -25.29127613 -32.27999867]\n",
+      " [-21.29647321 -32.04328038 -41.7745597  -51.7523248 ]\n",
+      " [-39.34656473 -48.70818283 -55.86347962 -58.66479942]\n",
+      " [-61.06624826 -70.95903783 -66.62418346   0.        ]]\n",
+      "\n",
+      "[[   0.          -34.85900568  -59.84248618  -79.39870066]\n",
+      " [ -50.11741811  -76.90807196 -103.86615034 -131.1977374 ]\n",
+      " [-100.33690879 -125.72505738 -145.58352727 -151.78867403]\n",
+      " [-163.67224205 -190.85099557 -177.61283049    0.        ]]\n",
+      "\n",
+      "[[   0.          -78.76139664 -141.30966964 -193.24982155]\n",
+      " [-119.22332912 -184.80205534 -255.58939775 -327.29475892]\n",
+      " [-254.30258241 -320.60984753 -372.98371473 -386.32388338]\n",
+      " [-430.9697446  -503.12576749 -465.47989084    0.        ]]\n",
+      "\n",
+      "[[    0.          -180.97967705  -335.09181114  -468.61198868]\n",
+      " [ -287.4368607   -446.95600109  -627.17096922  -809.99590827]\n",
+      " [ -643.75836952  -813.31581074  -947.05635327  -973.85516387]\n",
+      " [-1122.73559195 -1310.33976409 -1206.51491497     0.        ]]\n",
+      "\n",
+      "[[    0.          -422.73654937  -799.49464074 -1135.64136957]\n",
+      " [ -701.33181669 -1089.0947876  -1539.58139169 -1996.80445221]\n",
+      " [-1630.06771795 -2058.45546646 -2392.65808752 -2440.54736804]\n",
+      " [-2904.2147851  -3385.40664559 -3103.32595746     0.        ]]\n",
+      "\n",
+      "[[    0.         -1001.56804379 -1919.56600218 -2754.59475355]\n",
+      " [-1727.59055385 -2671.89365154 -3785.81194005 -4914.46875277]\n",
+      " [-4129.47864913 -5204.31472491 -6027.15808514 -6094.30771657]\n",
+      " [-7474.68141997 -8697.69137522 -7938.19219224     0.        ]]\n",
+      "\n",
+      "[[     0.          -2400.82496817  -4635.76541817  -6692.67534515]\n",
+      " [ -4286.10453627  -6592.15769389  -9329.19942755 -12091.48627235]\n",
+      " [-10464.62977428 -13150.72395704 -15156.26390849 -15186.60258294]\n",
+      " [-19165.81516772 -22254.97930761 -20223.9425386       0.        ]]\n",
+      "\n",
+      "[[     0.          -5809.01198823 -11253.42846294 -16294.59641062]\n",
+      " [-10689.06425414 -16337.65760063 -23039.90848865 -29764.10948666]\n",
+      " [-26521.22577375 -33219.25560466 -38074.6912122  -37804.27274631]\n",
+      " [-49001.13505947 -56771.13231915 -51372.17725685      0.        ]]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    877\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 878\u001b[1;33m                 \u001b[0mident\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    879\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\jupyter_client\\session.py\u001b[0m in \u001b[0;36mrecv\u001b[1;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[0;32m    802\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 803\u001b[1;33m             \u001b[0mmsg_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    804\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\zmq\\sugar\\socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[1;34m(self, flags, copy, track)\u001b[0m\n\u001b[0;32m    466\u001b[0m         \"\"\"\n\u001b[1;32m--> 467\u001b[1;33m         \u001b[0mparts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    468\u001b[0m         \u001b[1;31m# have first part already, only loop while more to receive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\zmq\\backend\\cython\\checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-85-17f881244f0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrandom_policy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicy_eval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-84-2b5e38182ce3>\u001b[0m in \u001b[0;36mpolicy_eval\u001b[1;34m(policy, env, discount_factor, theta)\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdelta_value\u001b[0m\u001b[1;33m<\u001b[0m\u001b[0mtheta\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m         \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    851\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 853\u001b[1;33m             \u001b[0mpassword\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    854\u001b[0m         )\n\u001b[0;32m    855\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    881\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    882\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 883\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    884\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    885\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "random_policy = np.ones([env.nS, env.nA]) / env.nA\n",
-    "# v = policy_eval(random_policy, env)\n",
+    "v = policy_eval(random_policy, env)\n",
     "\n",
-    "print(random_policy)\n",
-    "# print(v.reshape((4,4)))\n",
-    "for a, action_prob in enumerate(random_policy[0]):\n",
-    "    print(a)\n",
-    "    print(action_prob)"
+    "print(v.reshape((4,4)))"
    ]
   },
   {
